# codebase-C

Cmake/: CMakeLists.txt  FindGLEW.cmake  FindGLFW.cmake
biomodels/: centerline.h  gl_network.h  network.h
math/: vec3.h
structure/: kdtree.cuh  swc.h
visualization/: color.h  gl_light.h
